
syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "net.atos.daf.ct2.poiservice";

package poiservice;

service POIService{
rpc GetAllGobalPOI (POIEntityRequest) returns (POIResponseList);
rpc GetAllPOI (POIRequest) returns (POIResponseList);
rpc CreatePOI (POIRequest) returns (POIResponse);
rpc UpdatePOI (POIRequest) returns (POIResponse);
rpc DeletePOI (POIRequest) returns (POIResponse);
rpc DeletePOIBulk (POIDeleteBulkRequest) returns (POIResponse);
rpc DownloadPOIForExcel (DownloadPOIRequest) returns (POIResponseList);
rpc UploadPOIExcel (POIUploadRequest) returns (POIUploadResponse);
rpc GetAllTripDetails (TripRequest) returns (TripResponce);
rpc UpdateTripAddress (AddTripAddressRequest) returns (AddTripAddressResponse);
    }

 message POIUploadRequest{
   repeated POIRequest POIList = 1;
}

message POIUploadResponse  {
  repeated POIRequest POIExcelList = 1;
  repeated POIRequest PoiUploadedList = 2;
  repeated POIRequest PoiDuplicateList = 3;
  Responsecode code = 4;
  string message = 5;
}
message POIEntityRequest{
    int32 CategoryId = 1;
     google.protobuf.Int32Value SubCategoryId = 2;
}

message AddTripAddressRequest{
    int32 Id =1;      
    string StartAddress=2;
    string EndAddress =3;
}
message AddTripAddressResponse{
AddTripAddressRequest TripAddressDetails=1;
Responsecode Responsecode=2;
string message=3;

}


enum Responsecode{
  None = 0;
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError = 500;
}

message POIRequest{
    int32 Id =1;
    google.protobuf.Int32Value OrganizationId=2;
    int32 CategoryId = 3;
     google.protobuf.Int32Value SubCategoryId = 4;
    string Name =5;
    string Type=6;
    string Address=7;
    string City=8;
    string Country=9;
    string Zipcode=10;
    double Latitude=11;
    double Longitude=12;
    double Distance=13;
    string State=14;
    int32 TripId = 15;
    int32 CreatedBy = 16;
    int32 CreatedAt = 17;
    bytes Icon =18;
}
message POIData{
    int32 Id =1;
    google.protobuf.Int32Value OrganizationId=2;
    int32 CategoryId = 3;
     google.protobuf.Int32Value SubCategoryId = 4;
    string CategoryName = 5;
    string SubCategoryName = 6;
    string Name =7;
    string Type=8;
    string Address=9;
    string City=10;
    string Country=11;
    string Zipcode=12;
    double Latitude=13;
    double Longitude=14;
    double Distance=15;
    string State=16;
    int32 CreatedBy=17;
    int64 CreatedAt=18;
    bytes Icon =19;
}
message POIResponse{
  POIData POIData = 1;
  Responsecode code = 2;
  string message = 3;
}

message POIResponseList  {
  repeated POIData POIList = 1;
  Responsecode code = 2;
  string message = 3;
}
message DownloadPOIRequest{
    int32 OrganizationId = 1;
}
message POIDeleteBulkRequest {
  repeated int32 Id= 1;
}

message TripRequest {
  string VIN= 1;
  int64 StartDateTime= 2;
  int64 EndDateTime= 3;
}

message TripResponce {
         repeated TripData TripData=1;   
         Responsecode code = 2;
         string message = 3;
}
message TripData {
        int32 Id =1;
        string TripId=2;
         string VIN=3;
         string DriverFirstName=4;
         string DriverLastName=5; 
         string DriverId1=6;
         string DriverId2=7;
         int32 Distance=8; 
         string StartAddress=9;
         string EndAddress=10;
         double StartPositionlattitude=11;
         double StartPositionLongitude=12;
         double EndPositionLattitude=13;
         double EndPositionLongitude=14;
         int64 StartTimeStamp=15;
         int64 EndTimeStamp=16;
         repeated LiveFleetPosition LiveFleetPosition=17;
}
message LiveFleetPosition {
         double GpsAltitude=1;
         double GpsHeading=2; 
         double GpsLatitude=3;
         double GpsLongitude=4; 
         int32 Id=5;
}