syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "net.atos.daf.ct2.pushnotificationservice";

package pushnotificationservice;

service PushNotificationService {
  rpc GetAlertMessageStream (google.protobuf.Empty) returns (stream AlertMessageData);
  rpc GetEligibleAccountForAlert (AlertMesssageProp) returns (AlertVehicleDetails);
  rpc GetVehicleByAccountVisibility (VisibilityVehicleRequest) returns (AssociatedVehicleResponse);
}

message AlertMessageData {
	int32 Id=1;
	string Tripid=2;
	string Vin=3;
	string CategoryType=4;
	string Type=5;
	string Name=6;
	int32 Alertid=7;
	double ThresholdValue=8;
	string ThresholdValueUnitType=9;
	double ValueAtAlertTime=10;
	double Latitude=11;
	double Longitude=12;
	int64 AlertGeneratedTime=13;
	int64 MessageTimestamp=14;
	int64 CreatedAt=15;
	int64 ModifiedAt=16;
	ResponseCode Code=17;
    string message = 18;
	string UrgencyLevelType = 19;
	int32 VehicleGroupId = 20;
	string VehicleGroupName = 21;
	string VehicleRegNo = 22;
	string VehicleName = 23;
}
enum ResponseCode{
  None = 0;
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError = 500;
}

message AlertMesssageProp{
int32 AlertId = 1;
string VIN = 2;
string AlertCategory = 3;
string AlertType = 4;
string AlertUrgency = 5;
}

message AlertVehicleDetails{
	int32 VehicleGroupId = 1;
	string VehicleGroupName = 2;
	string VehicleRegNo = 3;
	string VehicleName = 4;
	int32 OrganizationId = 5;
	ResponseCode Code = 6;
	string message = 7;
	int32 AlertCreatedAccountId = 8;
	string AlertCategoryKey =  9;
	string AlertTypeKey =  10;
	string UrgencyTypeKey =  11;
	repeated int32 OTAAccountIds = 12;
}
message AssociatedVehicleResponse {
  repeated AssociatedVehicle AssociatedVehicle = 1;
  ResponseCode Code = 2;
  repeated FeatureEnum FeatureEnum=3;
}
message FeatureEnum
{
	string FeatureEnumType =1; 
}
message AssociatedVehicle {	
    int32 VehicleId =  1;        
    string Vin =  2;        
}

message VisibilityVehicleRequest {
	int32 AccountId = 1;
	int32 OrganizationId = 2;
	repeated int32 FeatureIds = 3;
}